CMBSandbox4/src/objects/Arrangement__c.object
<CustomObject>
    <description>this is for compensation arrangements.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Arrangements</relationshipLabel>
        <relationshipName>Arrangements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apps_Experience__c</fullName>
        <label>Apps Experience</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Bandwidth_Available__c</fullName>
        <inlineHelpText>What type of bandwidth do you have available?</inlineHelpText>
        <label>Bandwidth Available?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Structure__c</fullName>
        <inlineHelpText>Time and Material, Fixed Bid...</inlineHelpText>
        <label>Billing Structure?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Process_Review_Stage__c</fullName>
        <inlineHelpText>Would you like to get involved in the BPR stage?</inlineHelpText>
        <label>Business Process Automation Stage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Implementation__c</fullName>
        <inlineHelpText>Sales Cloud, Service Cloud</inlineHelpText>
        <label>CRM Implementation (Sales/Service Cloud)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Call_center_experts__c</fullName>
        <label>Call center experts?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Certifications__c</fullName>
        <label>Certifications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Challenges__c</fullName>
        <label>Challenges</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Communication_Structure__c</fullName>
        <inlineHelpText>Who will be the point person?</inlineHelpText>
        <label>Communication Structure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communities__c</fullName>
        <inlineHelpText>Experience with Communities?</inlineHelpText>
        <label>Communities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Arrangements</relationshipLabel>
        <relationshipName>Arrangements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>What country are you based out of? Where are you located?</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Arrangement__c</fullName>
        <label>Date Arrangement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Biz_Started__c</fullName>
        <label>Date Biz Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dislike_Spot__c</fullName>
        <inlineHelpText>What areas do you not enjoy?</inlineHelpText>
        <label>Dislike Spot</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_you_work_with_Partners_EndCustomers__c</fullName>
        <label>Do you work with Partners/EndCustomers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enjoy_Spot__c</fullName>
        <label>Enjoy Spot</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Heruko__c</fullName>
        <label>Heruko</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_many_months_training_for_new_Devs__c</fullName>
        <inlineHelpText>For new developers, how many months training/experience do they have?</inlineHelpText>
        <label>How many months training for new Devs?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industries_Prior_Projects__c</fullName>
        <label>Industries (Prior Projects)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Integration_Experience__c</fullName>
        <label>Integration Experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_of_Readiness__c</fullName>
        <label>Level of Readiness</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Tested &amp; Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Qualified &amp; Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Seems good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Not ready/Need to Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Not a fit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Specialty_Areas_Experience__c</fullName>
        <inlineHelpText>What are the main areas of strengths of your firm and experience?</inlineHelpText>
        <label>Main Specialty Areas/Experience</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Main_Tecnical_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Tecnical Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Arrangements (Main Tecnical Contact)</relationshipLabel>
        <relationshipName>Arrangements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NonProfit_Starter_Pack__c</fullName>
        <label>NonProfit Starter Pack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offices__c</fullName>
        <label>Offices</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_Items_Requested_from_Vendor__c</fullName>
        <inlineHelpText>This is the items waiting from the client</inlineHelpText>
        <label>Open Items Requested from Vendor</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Customers__c</fullName>
        <inlineHelpText>Who else do you work with? Who are your typical customers? (Consultants, end Users)</inlineHelpText>
        <label>Other Customers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Management_Tools__c</fullName>
        <label>Project Management Tools</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Projects_Completed__c</fullName>
        <label># Projects Completed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pros_Cons__c</fullName>
        <label>Pros/Cons</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Radian6__c</fullName>
        <label>Radian6</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rate_text__c</fullName>
        <label>Rate (text)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SF_Dev_Team_Size__c</fullName>
        <label>SF Dev Team Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_Modules__c</fullName>
        <label>Salesforce Modules?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Total_Team_Size__c</fullName>
        <label># Total Team Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contract Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visas_to_work_in_US__c</fullName>
        <label>Visas to work in US?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Who_can_interface_with_Clients_English__c</fullName>
        <label>Who can interface with Clients (English)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_is_main_resource_contact__c</fullName>
        <label>Who is main resource contact?</label>
        <type>TextArea</type>
    </fields>
    <label>Arrangement</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Arrangements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>